@@ -1,5 +1,5 @@
 /*
- * Copyright 2001-2022 Geert Bevin (gbevin[remove] at uwyn dot com)
+ * Copyright 2001-2023 Geert Bevin (gbevin[remove] at uwyn dot com)
  * Licensed under the Apache License, Version 2.0 (the "License")
  */
 package rife.database;
@@ -11,15 +11,11 @@ import java.beans.BeanInfo;
 import java.beans.IntrospectionException;
 import java.beans.Introspector;
 import java.beans.PropertyDescriptor;
-import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
 import java.sql.ResultSet;
 import java.sql.ResultSetMetaData;
 import java.sql.SQLException;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
+import java.util.*;
 
 /**
  * This class allows a {@link ResultSet} to be easily processed into bean
@@ -59,8 +55,8 @@ public class DbBeanFetcher<BeanType> extends DbRowProcessor {
      *
      * @param datasource       the datasource to be used
      * @param beanClass        the type of bean that will be handled
-     * @param collectInstances <code>true</code> if the fetcher should
-     *                         collected the bean instances; <code>false</code> if otherwise
+     * @param collectInstances {@code true} if the fetcher should
+     *                         collected the bean instances; {@code false} if otherwise
      * @throws BeanException thrown if there is an error getting
      *                       information about the bean via the beanClass
      * @since 1.0
@@ -80,13 +76,13 @@ public class DbBeanFetcher<BeanType> extends DbRowProcessor {
         } catch (IntrospectionException e) {
             throw new BeanException("Couldn't introspect the bean with class '" + beanClass_.getName() + "'.", beanClass, e);
         }
-        PropertyDescriptor[] bean_properties = bean_info.getPropertyDescriptors();
-        for (PropertyDescriptor bean_property : bean_properties) {
+        var bean_properties = bean_info.getPropertyDescriptors();
+        for (var bean_property : bean_properties) {
             beanProperties_.put(bean_property.getName().toLowerCase(), bean_property);
         }
 
         if (collectInstances) {
-            collectedInstances_ = new ArrayList<BeanType>();
+            collectedInstances_ = new ArrayList<>();
         }
 
         assert datasource_ != null;
@@ -101,8 +97,8 @@ public class DbBeanFetcher<BeanType> extends DbRowProcessor {
      *
      * @param resultSet the {@link ResultSet} from which to process the
      *                  row
-     * @return <code>true</code> if a bean instance was retrieved; or
-     * <p><code>false</code> if otherwise
+     * @return {@code true} if a bean instance was retrieved; or
+     * <p>{@code false} if otherwise
      * @throws SQLException thrown when there is a problem processing
      *                      the row
      */
@@ -112,27 +108,39 @@ public class DbBeanFetcher<BeanType> extends DbRowProcessor {
 
         BeanType instance = null;
         try {
-            instance = beanClass_.newInstance();
-        } catch (InstantiationException e) {
-            SQLException e2 = new SQLException("Can't instantiate a bean with class '" + beanClass_.getName() + "' : " + e.getMessage());
+            instance = beanClass_.getDeclaredConstructor().newInstance();
+        } catch (InvocationTargetException | InstantiationException e) {
+            var e2 = new SQLException("Can't instantiate a bean with class '" + beanClass_.getName() + "' : " + e.getMessage());
             e2.initCause(e);
             throw e2;
         } catch (IllegalAccessException e) {
-            SQLException e2 = new SQLException("No permission to instantiate a bean with class '" + beanClass_.getName() + "' : " + e.getMessage());
+            var e2 = new SQLException("No permission to instantiate a bean with class '" + beanClass_.getName() + "' : " + e.getMessage());
+            e2.initCause(e);
+            throw e2;
+        } catch (NoSuchMethodException e) {
+            var e2 = new SQLException("No default constructor to instantiate a bean with class '" + beanClass_.getName() + "' : " + e.getMessage());
             e2.initCause(e);
             throw e2;
         }
 
-        ResultSetMetaData meta = resultSet.getMetaData();
+        var meta = resultSet.getMetaData();
+
         String column_name;
         String column_label;
 
-        for (int i = 1; i <= meta.getColumnCount(); i++) {
+        // keep track of the columns that have been set as a bean property,
+        // to prevent later results from overwriting earlier ones
+        var processed_columns = new HashSet<String>();
+
+        // go over all the columns and try to set them as bean properties
+        for (var i = 1; i <= meta.getColumnCount(); i++) {
             column_name = meta.getColumnName(i).toLowerCase();
             column_label = meta.getColumnLabel(i).toLowerCase();
-            if (beanProperties_.containsKey(column_name)) {
+            if (beanProperties_.containsKey(column_name) && !processed_columns.contains(column_name)) {
+                processed_columns.add(column_name);
                 populateBeanProperty(instance, column_name, meta, resultSet, i);
-            } else if (beanProperties_.containsKey(column_label)) {
+            } else if (beanProperties_.containsKey(column_label) && !processed_columns.contains(column_label)) {
+                processed_columns.add(column_label);
                 populateBeanProperty(instance, column_label, meta, resultSet, i);
             }
         }
@@ -149,50 +157,50 @@ public class DbBeanFetcher<BeanType> extends DbRowProcessor {
 
     private void populateBeanProperty(BeanType instance, String propertyName, ResultSetMetaData meta, ResultSet resultSet, int columnIndex)
     throws SQLException {
-        PropertyDescriptor property = beanProperties_.get(propertyName);
-        Method write_method = property.getWriteMethod();
+        var property = beanProperties_.get(propertyName);
+        var write_method = property.getWriteMethod();
         if (write_method != null) {
             try {
-                int column_type = meta.getColumnType(columnIndex);
+                var column_type = meta.getColumnType(columnIndex);
                 Object typed_object;
                 try {
                     typed_object = datasource_.getSqlConversion().getTypedObject(resultSet, columnIndex, column_type, property.getPropertyType());
                 } catch (DatabaseException e) {
-                    SQLException e2 = new SQLException("Data conversion error while obtaining the typed object.");
+                    var e2 = new SQLException("Data conversion error while obtaining the typed object.");
                     e2.initCause(e);
                     throw e2;
                 }
 
                 // the sql conversion couldn't create a typed value
                 if (null == typed_object) {
-                    // check if the object returned by the resultset is of the same type hierarchy as the property type
-                    Object column_value = resultSet.getObject(columnIndex);
+                    // check if the object returned by the result set is of the same type hierarchy as the property type
+                    var column_value = resultSet.getObject(columnIndex);
                     if (column_value != null &&
                         property.getPropertyType().isAssignableFrom(column_value.getClass())) {
                         typed_object = column_value;
                     }
                     // otherwise try to call the property type's constructor with a string argument
                     else {
-                        String column_stringvalue = resultSet.getString(columnIndex);
-                        if (column_stringvalue != null) {
+                        var column_string_value = resultSet.getString(columnIndex);
+                        if (column_string_value != null) {
                             try {
-                                Constructor<?> constructor = property.getPropertyType().getConstructor(String.class);
+                                var constructor = property.getPropertyType().getConstructor(String.class);
                                 if (constructor != null) {
-                                    typed_object = constructor.newInstance((Object[]) new String[]{column_stringvalue});
+                                    typed_object = constructor.newInstance((Object[]) new String[]{column_string_value});
                                 }
                             } catch (SecurityException e) {
                                 instance = null;
-                                SQLException e2 = new SQLException("No permission to obtain the String constructor of the property with name '" + property.getName() + "' and class '" + property.getPropertyType().getName() + "' of the bean with class '" + beanClass_.getName() + "'.");
+                                var e2 = new SQLException("No permission to obtain the String constructor of the property with name '" + property.getName() + "' and class '" + property.getPropertyType().getName() + "' of the bean with class '" + beanClass_.getName() + "'.");
                                 e2.initCause(e);
                                 throw e2;
                             } catch (NoSuchMethodException e) {
                                 instance = null;
-                                SQLException e2 = new SQLException("Couldn't find a String constructor for the property with name '" + property.getName() + "' and class '" + property.getPropertyType().getName() + "' of the bean with class '" + beanClass_.getName() + "'.");
+                                var e2 = new SQLException("Couldn't find a String constructor for the property with name '" + property.getName() + "' and class '" + property.getPropertyType().getName() + "' of the bean with class '" + beanClass_.getName() + "'.");
                                 e2.initCause(e);
                                 throw e2;
                             } catch (InstantiationException e) {
                                 instance = null;
-                                SQLException e2 = new SQLException("Can't instantiate a new instance of the property with name '" + property.getName() + "' and class '" + property.getPropertyType().getName() + "' of the bean with class '" + beanClass_.getName() + "'.");
+                                var e2 = new SQLException("Can't instantiate a new instance of the property with name '" + property.getName() + "' and class '" + property.getPropertyType().getName() + "' of the bean with class '" + beanClass_.getName() + "'.");
                                 e2.initCause(e);
                                 throw e2;
                             }
@@ -207,22 +215,22 @@ public class DbBeanFetcher<BeanType> extends DbRowProcessor {
                 }
             } catch (IllegalAccessException e) {
                 instance = null;
-                SQLException e2 = new SQLException("No permission to invoke the '" + write_method.getName() + "' method on the bean with class '" + beanClass_.getName() + "'.");
+                var e2 = new SQLException("No permission to invoke the '" + write_method.getName() + "' method on the bean with class '" + beanClass_.getName() + "'.");
                 e2.initCause(e);
                 throw e2;
             } catch (IllegalArgumentException e) {
                 instance = null;
-                SQLException e2 = new SQLException("Invalid arguments while invoking the '" + write_method.getName() + "' method on the bean with class '" + beanClass_.getName() + "'.");
+                var e2 = new SQLException("Invalid arguments while invoking the '" + write_method.getName() + "' method on the bean with class '" + beanClass_.getName() + "'.");
                 e2.initCause(e);
                 throw e2;
             } catch (InvocationTargetException e) {
                 instance = null;
-                SQLException e2 = new SQLException("The '" + write_method.getName() + "' method of the bean with class '" + beanClass_.getName() + "' has thrown an exception");
+                var e2 = new SQLException("The '" + write_method.getName() + "' method of the bean with class '" + beanClass_.getName() + "' has thrown an exception");
                 e2.initCause(e);
                 throw e2;
             } catch (SQLException e) {
                 instance = null;
-                SQLException e2 = new SQLException("SQLException while invoking the '" + write_method.getName() + "' method of the bean with class '" + beanClass_.getName() + "'");
+                var e2 = new SQLException("SQLException while invoking the '" + write_method.getName() + "' method of the bean with class '" + beanClass_.getName() + "'");
                 e2.initCause(e);
                 throw e2;
             }
@@ -235,9 +243,9 @@ public class DbBeanFetcher<BeanType> extends DbRowProcessor {
      * a list.
      *
      * @param instance the received bean instance
-     * @return <code>true</code> if the bean fetcher should continue to
+     * @return {@code true} if the bean fetcher should continue to
      * retrieve the next bean; or
-     * <p><code>false</code> if the retrieval should stop after this bean
+     * <p>{@code false} if the retrieval should stop after this bean
      * @since 1.0
      */
     public boolean gotBeanInstance(BeanType instance) {
